Closed Bug 1654926 Opened 4 years ago Closed 4 years ago

Processes that crash in startup can be added to the Preallocated Process list

Categories

(Core :: DOM: Content Processes, defect, P2)

defect

Tracking

()

RESOLVED FIXED
81 Branch
Fission Milestone M6b
Tracking Status
firefox81 --- fixed

People

(Reporter: jesup, Assigned: jesup)

References

Details

Crash Data

Attachments

(1 file)

A process that crashes before it's added to the Preallocated process cache will be added, and when used will crash in AssertAlive() (or in debug in SetProcessPriority()).

After it's added, if it dies it will be removed via Erase(), so we don't need to worry about that (manually tested to make sure).

Severity: -- → S2
Priority: -- → P2

Fission M6b
block AssertAlive bug 1649092

Fission Milestone: --- → M6b
Depends on: 1649092
Pushed by rjesup@wgate.com:
https://hg.mozilla.org/integration/autoland/rev/2559ac5883da
don't add dead processes to the preallocated process cache r=nika
Status: NEW → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 81 Branch
Crash Signature: [@ mozilla::dom::ContentParent::GetUsedBrowserProcess]
Crash Signature: [@ mozilla::dom::ContentParent::GetUsedBrowserProcess] → [@ mozilla::dom::ContentParent::GetUsedBrowserProcess] [@ libxul.so (deleted)@0x523dc79] [@ libxul.so (deleted)@0x55123d9] [@ mozilla::dom::ContentParent::AssertAlive]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: