Bug 1654926: don't add dead processes to the preallocated process cache r=nika

Differential Revision: https://phabricator.services.mozilla.com/D84755